<resources>
    <string name="app_name">AllegroWatcher</string>

    <string name="loading">Loading...</string>
    <string name="dialog_new_filter">New Filter</string>
    <string name="dialog_keyword">Keyword</string>
    <string name="dialog_category">Category</string>
    <string name="dialog_price_min">Minimum price</string>
    <string name="dialog_price_max">Maximum price</string>
    <string name="dialog_condtion_used">Used</string>
    <string name="dialog_condtion_new">New</string>
    <string name="dialog_add">Add</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="title_activity_summary">SummaryActivity</string>
    <string name="delete_title">Delete filter?</string>
    <string name="delete_yes">Yes</string>
    <string name="delete_no">No</string>

    <string name="tag_summary">summary_tag</string>
    <string name="tag_filter">filter_tag</string>

    <string name="allegro_path">http://allegro.pl/show_item.php?item=%s</string>
</resources>
