<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="240dp"
    android:layout_height="match_parent"
    android:padding="4dp">

    <TextView
        android:text="@string/dialog_new_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="4dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/dialog_keyword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_keyword"
        android:inputType="textCapSentences"
        />
    <EditText
        android:id="@+id/dialog_category_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_category_id"
        android:inputType="numberSigned"
        />
    <EditText
        android:id="@+id/dialog_category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_category_name"
        android:inputType="textCapSentences"
        />
    <EditText
        android:id="@+id/dialog_price_min"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_price_min"
        android:inputType="numberSigned"
        />
    <EditText
        android:id="@+id/dialog_price_max"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_price_max"
        android:inputType="numberSigned"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_cancel"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/button_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_add"
            android:layout_weight="1"
            />
    </LinearLayout>
</LinearLayout>